change whenAsciiModeOn/Off to whenRimeOptionChanged

--- a/doc/按键语法说明.md
+++ b/doc/按键语法说明.md
@@ -86,25 +86,10 @@ shiftButton: {
 },
 ```
 
-### whenAsciiModeOn, whenAsciiModeOff 当 Rime 选项 ascii_mode 打开或关闭时的定义
+### whenAlphabetic 当切换到英文键盘时的定义
+注意：此选项只能在 26 键布局的按键中使用，这些按键大部分位于 `jsonnet/Buttons/Layout26.libsonnet` 文件中，少部分位于 `jsonnet/Buttons/Common.libsonnet` 文件中。
 
-注意：键盘调起时，ascii_mode 通常为 false（即中文模式），用户切换到英文模式时，ascii_mode 会变为 true。所以此选项的最佳用法是将中文模式的定义放在 params 中，将英文模式的定义放在 params.whenAsciiModeOn 中。如果把过来，把英文模式的定义放在 params 中，把中文模式的定义放在 params.whenAsciiModeOff 中，则会出现气泡显示的文本与按键显示不符的问题。
-
-whenAsciiModeOn 和 whenAsciiModeOff 只能定义一个，以字母键 b 为例，如果我们想让它在中文模式下显示为大写，英文模式下显示为小写，则可以写出如下配置：
-
-```jsonnet
-bButton: {
-  name: 'bButton',
-  params: {
-    action: { character: 'b' },
-
-    whenAsciiModeOff: { text: 'B' },
-  },
-},
-```
-上面的配置表示，当 ascii_mode 关闭时（即中文模式），显示为大写 B；params 中的 action 定义则自动被推导为在 ascii_mode 打开时生效（即英文模式），显示为小写 b。（不过注意，此写法即使在中文输入状态下，气泡显示的文本仍然是小写 b）
-
-whenAsciiModeOn / whenAsciiModeOff 还可以对 swipeUp / swipeDown 等进行重新定义，例如逗号键，在中文模式和英文模式下，显示有差异，如做如下配置：
+`whenAlphabetic` 可以用来定义按键在切换到英文键盘时的显示和行为，例如逗号键，在中文键盘下显示中文逗号，在英文键盘下显示英文逗号，写法如下：
 
 ```jsonnet
 commaButton: {
@@ -120,44 +105,9 @@ commaButton: {
       center: { y: 0.3 }
     },
 
-    whenAsciiModeOn: {
+    whenAlphabetic: {
       text: ',', center: { y: 0.48 },
       swipeUp: { text: '.', center: { y: 0.28 } },
-    }
-  },
-},
-```
-解释：whenAsciiModeOff 中的定义会覆盖默认的 action 和 swipeUp 定义，从而在中文模式下显示中文逗号和句号，而在英文模式下会由 params.action 和 params.swipeUp.action 自动推导显示英文逗号和句号。
-
-如果有需要，也可以在 whenAsciiModeOn / whenAsciiModeOff 中对 action / swipeUp.action / swipeDown.action 进行重新定义。比如，如果想让逗号键在中文模式上划输入句号，但在英文模式下直接输入句号，上划输入逗号，则可以这样写：
-
-```jsonnet
-commaButton: {
-  name: 'commaButton',
-  params: {
-    # 中文模式输入为逗号
-    action: { character: ',', },
-    text: '，',
-    center: { y: 0.52 },
-
-    # 中文模式上划输入句号
-    swipeUp: {
-      action: { character: '.' },
-      text: '。',
-      center: { y: 0.3 }
-    },
-
-    whenAsciiModeOn: { # 英文模式下
-      # 英文模式输入为句号
-      action: { character: '.', },
-      text: '.', center: { y: 0.48 },
-
-      # 英文模式上划输入逗号
-      swipeUp: {
-        action: { character: ',', },
-        text: ',',
-        center: { y: 0.28 }
-      },
     }
   },
 },
@@ -227,6 +177,94 @@ functionButton: {
         lockedNotificationMatchState: true,
       },
     ],
+  },
+},
+```
+
+### whenRimeOptionChanged 当 Rime 选项打开或关闭时的定义
+
+注意：应该将 rime option 的默认值相关的定义放在 params 中，将 option 变化后的相关定义放在 params.whenRimeOptionChanged 中。
+
+以字母键 b 为例，如果我们想让它在中文模式下显示为大写，英文模式下显示为小写，则可以写出如下配置：
+
+```jsonnet
+bButton: {
+  name: 'bButton',
+  params: {
+    action: { character: 'b' },
+    text: 'B',
+
+    whenRimeOptionChanged: {
+      optionName: 'ascii_mode',
+      optionValue: true,
+      text: 'b',
+    },
+  },
+},
+```
+ascii_mode 默认是关闭(false)，手动开启后变为 true。上面的配置表示，当 ascii_mode 关闭时（即中文模式），显示为大写 B；whenRimeOptionChanged 中的定义表示，当 ascii_mode 打开时（即英文模式），将 text 设置为小写 b。
+
+whenRimeOptionChanged 还可以对 swipeUp / swipeDown 等进行重新定义，例如逗号键，在中文模式和英文模式下，显示有差异，如做如下配置：
+
+```jsonnet
+commaButton: {
+  name: 'commaButton',
+  params: {
+    action: { character: ',', },
+    text: '，',
+    center: { y: 0.52 },
+
+    swipeUp: {
+      action: { character: '.' },
+      text: '。',
+      center: { y: 0.3 }
+    },
+
+    whenRimeOptionChanged: {
+      optionName: 'ascii_mode',
+      optionValue: true,
+      text: ',', center: { y: 0.48 },
+      swipeUp: { text: '.', center: { y: 0.28 } },
+    }
+  },
+},
+```
+解释：whenRimeOptionChanged 中的定义会覆盖默认的 action 和 swipeUp 定义，从而在中文模式下显示中文逗号和句号，而在 rime option ascii_mode 变为 true 时（英文模式下）会由 whenRimeOptionChanged 中指定的内容更改为显示英文逗号和句号。
+
+如果有需要，也可以在 whenRimeOptionChanged 中对 action / swipeUp.action / swipeDown.action 进行重新定义。比如，如果想让逗号键在中文模式上划输入句号，但在英文模式下直接输入句号，上划输入逗号，则可以这样写：
+
+```jsonnet
+commaButton: {
+  name: 'commaButton',
+  params: {
+    # 中文模式输入为逗号
+    action: { character: ',', },
+    text: '，',
+    center: { y: 0.52 },
+
+    # 中文模式上划输入句号
+    swipeUp: {
+      action: { character: '.' },
+      text: '。',
+      center: { y: 0.3 }
+    },
+
+    whenRimeOptionChanged: {
+      # 英文模式下
+      optionName: 'ascii_mode',
+      optionValue: true,
+
+      # 英文模式输入为句号
+      action: { character: '.', },
+      text: '.', center: { y: 0.48 },
+
+      # 英文模式上划输入逗号
+      swipeUp: {
+        action: { character: ',', },
+        text: ',',
+        center: { y: 0.28 }
+      },
+    }
   },
 },
 ```
